# abacus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: context-compaction.md  how-to-use-loops.md  plugin_guide.md
src/: activity.rs  agent.rs  compaction.rs  config.rs  context.rs  cron.rs  diff.rs  feedback.rs  goal.rs  headless.rs  input.rs  lib.rs  main.rs  markdown.rs  mcp.rs  model_info.rs  provider.rs  ralph.rs  services.rs  session.rs  setup.rs  subagent.rs  task.rs  theme.rs  tool_format.rs  tools.rs  tui.rs  web.rs
src/extensions/: mod.rs  plugins.rs  skills.rs
tests/: cli_headless.rs  e2e_agent.rs  mcp_http.rs  mcp_stdio.rs
